@@ -28,11 +28,10 @@
       <model>deskjet 5940</model>
     </parallel>
     <usb>
-      <ieee1284></ieee1284>
       <commandset>MLC,PCL,PML,DW-PCL,DESKJET,DYN</commandset>
-      <description>HP Deskjet 5940</description>
+      <description>5940</description>
       <manufacturer>HP</manufacturer>
-      <model>Deskjet 5940</model>
+      <model>Deskjet 5900 series</model>
     </usb>
   </autodetect>
   <functionality>A</functionality>
