@@ -1,3 +1,8 @@
+2006-02-27  Tim Waugh  <twaugh@redhat.com>
+
+	* printer/HP-DeskJet_5940.xml: Fixed IEEE 1284 information (RH
+	  bug #183090).
+
 2006-02-25  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-DesignJet_100.xml, printer/HP-DesignJet_500.xml,
